[package]
name = "pnt_cs_tool"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam-channel = "0.5.14"
dashmap = "6.1.0"
dotenv = "0.15.0"
eframe = "0.31"
egui_extras = "0.31"
postgres = "0.19.10"
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1", features = ["full"] }
